pelado 4 tickets menos eeeh

--- a/includes/bootstrap/bootstrap.css
+++ b/includes/bootstrap/bootstrap.css
@@ -103,7 +103,7 @@ code{padding:3px 4px;color:#d14;background-color:#f7f7f9;border:1px solid #e1e1e
 pre{display:block;padding:8.5px;margin:0 0 9px;font-size:12px;line-height:18px;background-color:#f5f5f5;border:1px solid #ccc;border:1px solid rgba(0, 0, 0, 0.15);-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;white-space:pre;white-space:pre-wrap;word-break:break-all;}pre.prettyprint{margin-bottom:18px;}
 pre code{padding:0;background-color:transparent;}
 form{margin:0 0 18px;}
-fieldset{padding:0;margin:0;border:0;}
+fieldset{padding:0;margin:0;border:0;padding: 0 10px 10px;margin: 20px 0;}
 legend{display:block;width:100%;padding:0;margin-bottom:27px;font-size:19.5px;line-height:36px;color:#333333;border:0;border-bottom:1px solid #eee;}
 label,input,button,select,textarea{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:13px;font-weight:normal;line-height:18px;}
 label{display:block;margin-bottom:5px;color:#333333;}
@@ -608,3 +608,37 @@ a.thumbnail:hover{border-color:#0088cc;-webkit-box-shadow:0 1px 4px rgba(0, 105,
 .hide{display:none;}
 .show{display:block;}
 .invisible{visibility:hidden;}
+
+.titulos {
+    font-weight: bold;
+    font-Family: arial, helvetica, sans-serif;
+}
+
+.icon_edicion {
+    background: transparent url(../imagenes/iconos/edicion.png) no-repeat;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
+.botonCentradoTabla {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    clear: both;
+}
+
+.icon_buscar {
+    background: transparent url(../imagenes/iconos/buscar.png) no-repeat;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
+.horizontal {
+    margin: 0 auto;
+    float: left;
+}
+
+
