--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -183,7 +183,7 @@ $(document).ready( function() {
            <div class="form-actions">
                     [% PERL %]
                             print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Nivel 1' | i18n %]",
-                                                                boton   => "btn-large btn btn-primary",
+                                                                boton   => "btn btn btn-primary",
                                                                 onClick => "guardar(1);",
                                                                 title   => "[% 'Guardar el nivel 1' | i18n %]",
                                     ) ;
@@ -209,7 +209,7 @@ $(document).ready( function() {
 		
 			    [% PERL %]
 			            print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Nivel 2' | i18n %]",
-			                                                boton   => "btn-large btn btn-primary",
+			                                                boton   => "btn btn btn-primary",
 			                                                onClick => "guardar(2);",
 			                                                title   => "[% 'Guardar el nivel 2' | i18n %]",
 			                    ) ;
@@ -242,7 +242,7 @@ $(document).ready( function() {
 	     
 	                        [% PERL %]
 	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Nivel 3' | i18n %]",
-	                                                                    boton   => "btn-large btn btn-primary",
+	                                                                    boton   => "btn btn btn-primary",
 	                                                                    onClick => "guardar(3);",
 	                                                                    title   => "[% 'Guardar el nivel 3' | i18n %]",
 	                                        ) ;
